@@ -80,7 +80,7 @@ AC_ARG_ENABLE([codes],
   [AS_HELP_STRING([--enable-codes=SYMS],
     [select symbologies to compile [default=ean,i25,code39,code128]])],
   [],
-  [enable_codes="ean,code39,code128,i25"]) dnl pdf417
+  [enable_codes="ean,code39,code128,i25"]) dnl pdf417,qr
 
 AC_DEFUN([ZBAR_CHK_CODE], [
   AC_MSG_CHECKING([whether to build $2])
@@ -102,6 +102,7 @@ ZBAR_CHK_CODE([code128], [Code 128 symbology])
 ZBAR_CHK_CODE([code39], [Code 39 symbology])
 ZBAR_CHK_CODE([pdf417], [PDF417 symbology])
 ZBAR_CHK_CODE([i25], [Interleaved 2 of 5 symbology])
+ZBAR_CHK_CODE([qr], [QR Code])
 
 dnl libraries
 
