@@ -45,6 +45,9 @@
 #ifdef ENABLE_PDF417
 # include "decoder/pdf417.h"
 #endif
+#ifdef ENABLE_QR
+# include "decoder/qr_finder.h"
+#endif
 
 /* size of bar width history (implementation assumes power of two) */
 #ifndef DECODE_WINDOW
@@ -99,6 +102,9 @@ struct zbar_decoder_s {
 #endif
 #ifdef ENABLE_PDF417
     pdf417_decoder_t pdf417;            /* PDF417 decode state */
+#endif
+#ifdef ENABLE_QR
+    qr_finder_t qrf;                    /* QR Code finder state */
 #endif
 };
 
